@@ -1,3 +1,7 @@
+R1.5.4-1.0  01/31/2022    Kukhee Kim
+            read out destination rates
+            branch out from R1.5.4
+
 R1.5.4      10/10/2021    Matt Weaver
             Add modesel in hps_peek
             Print errors for failing sequence insertion
